--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context="ui.activities.ListActivity"
     >
+  <android.support.v7.widget.CardView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/text_input_margin"
+      android:elevation="10dp"
+      card_view:cardElevation="10dp"
+      card_view:cardPreventCornerOverlap="false">
+    <EditText
+        android:id="@+id/textInput"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/text_input_height"
+        android:inputType="textNoSuggestions"
+        android:importantForAccessibility="no"
+        android:hint="@string/add_to_do"
+        android:layout_margin="@dimen/text_input_margin"
+        android:textCursorDrawable="@null"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/black"
+        />
+  </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
