--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
   <dimen name="text_input_margin">8dp</dimen>
   <dimen name="text_input_padding">8dp</dimen>
   <dimen name="text_input_height">50dp</dimen>
+  <dimen name="to_do_recycler_margin">8dp</dimen>
 </resources>
