--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="ui.activities.ListActivity"
+    tools:context="org.josephmagara.todo.android.activities.android.ui.ListActivity"
     >
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
