--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="org.josephmagara.todo.android.activities.android.ui.ListActivity"
+    tools:context="org.josephmagara.todo.android.activities.android.ui.activities.ListActivity"
     >
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
@@ -14,25 +14,32 @@
       android:layout_margin="@dimen/text_input_margin"
       android:elevation="10dp"
       card_view:cardElevation="10dp"
-      card_view:cardPreventCornerOverlap="false">
+      card_view:cardPreventCornerOverlap="false"
+      >
     <EditText
         android:id="@+id/textInput"
         android:layout_width="match_parent"
         android:layout_height="@dimen/text_input_height"
-        android:inputType="textNoSuggestions"
-        android:importantForAccessibility="no"
-        android:hint="@string/add_to_do"
         android:layout_margin="@dimen/text_input_margin"
-        android:textCursorDrawable="@null"
-        android:textColor="@color/black"
         android:backgroundTint="@color/black"
+        android:hint="@string/add_to_do"
+        android:importantForAccessibility="no"
+        android:inputType="textNoSuggestions"
+        android:textColor="@color/black"
+        android:textCursorDrawable="@null"
         />
   </android.support.v7.widget.CardView>
-
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/toDoRecycler"
+  <android.support.v4.widget.SwipeRefreshLayout
+      android:id="@+id/toDoSwipeRefresh"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_margin="@dimen/to_do_recycler_margin"
-      />
+      >
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/toDoRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/to_do_recycler_margin"
+        />
+  </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
