Added a completion handler that will be triggered when a user finishes entering a to do

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -27,6 +27,7 @@
         android:inputType="textNoSuggestions"
         android:textColor="@color/black"
         android:textCursorDrawable="@null"
+        android:imeOptions="actionDone"
         />
   </android.support.v7.widget.CardView>
   <android.support.v4.widget.SwipeRefreshLayout
