--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -24,16 +24,17 @@
         android:backgroundTint="@color/black"
         android:hint="@string/add_to_do"
         android:importantForAccessibility="no"
-        android:inputType="textNoSuggestions"
         android:textColor="@color/black"
         android:textCursorDrawable="@null"
         android:imeOptions="actionDone"
+        android:inputType="textNoSuggestions"
         />
   </android.support.v7.widget.CardView>
   <android.support.v4.widget.SwipeRefreshLayout
       android:id="@+id/toDoSwipeRefresh"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_margin="@dimen/text_input_margin"
       >
     <android.support.v7.widget.RecyclerView
         android:id="@+id/toDoRecycler"
