--- a/app/src/main/res/layout/to_do_view_holder.xml
+++ b/app/src/main/res/layout/to_do_view_holder.xml
@@ -31,12 +31,14 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="16sp"
+          android:textStyle="bold"
           />
 
       <TextView
           android:id="@+id/dateCreated"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:textSize="12sp"
           />
     </LinearLayout>
   </LinearLayout>
